questions and technical writeup thoughts

--- a/data.ipynb
+++ b/data.ipynb
@@ -78,11 +78,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "aim of problem:\n",
+    "\n",
+    "given a storefront, return a function that"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def regression_tester():\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
