final technical writeup details

--- a/Final_Submission_Notebook.ipynb
+++ b/Final_Submission_Notebook.ipynb
@@ -6426,7 +6426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we've aggregated the nearby trip volumes, we compute the impression score. We would like the impression score to be between 0 and 1. To perform the calibration of this score, we compute a set of thresholdholds based on the distribution of trip volumes in the county. The reason that this calibration is done at the county level is because it seems reasonable that a client may want to find a piece of property nearby at the local level, rather than a national search. The kth percentile of trip volumes corresponds to the kth impression score.\n",
+    "Once we've aggregated the nearby trip volumes, we compute the impression score. We would like the impression score to be between 0 and 1. To perform the calibration of this score, we compute a set of threshold based on the distribution of trip volumes in the county. The reason that this calibration is done at the county level is because it seems reasonable that a client may want to find a piece of property nearby at the local level, rather than a national search. The kth percentile of trip volumes corresponds to the kth impression score.\n",
     "\n",
     "Note that there are other ways to calibrate the impression score. For example, instead of constraining the trip volumes, we could use the constraint than an equal proportion of segments have each impression score. "
    ]
